syntax = "proto3";

package user_proto;
import "google/protobuf/timestamp.proto";
option go_package = "./pkg/user/";

service UserService {
  rpc GetUser(UserGetRequest) returns (UserResponse) {}
  rpc GetUserByEmail(UserByEmailRequest) returns (UserResponse) {}
  rpc CreateUser(User) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
  rpc UpdateUser(User) returns(UserResponse) {}
}

message DeleteUserRequest {
  uint32 user_id = 1;
}

message UserGetRequest {
  uint32 user_id = 1;
}

message UserByEmailRequest {
  string email = 1;
}

message UserResponse {
  int64 status = 1;
  User user = 2;
  string error = 3;
}

message User {
  uint32 id = 1;
  string email = 2;
  string phone = 3;
  bool   is_verify = 4;
  string last_name = 5;
  string first_name = 6;
  string full_name = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  repeated Messenger messengers = 10;
  Organization organization = 11;
  bool blocked = 12;
  string role = 13;
}

message Messenger {
  uint32 id = 1;
  string name = 2;
  string value = 3;
}

message Organization {
  uint32 id = 1;
  string name = 2;
}